...
            self.iCloudKeyStore.removeObjectForKey("iCloud Selected Deck Name")
            self.iCloudKeyStore.synchronize()
            
            NSLog("Reset all games AND decks pressed")
        }
        
        let cancelAction = UIAlertAction(title: "Cancel", style: UIAlertActionStyle.Cancel) {
            UIAlertAction in
            NSLog("Cancel Pressed")
        }
        
        // Add the actions
        alertController.addAction(resetAllAction)
...
