...
    
    
    func putSelectedDeckNameOnLabel() {
        // Gets the selected deck from NSUserDefaults and puts it on the label
        let selectedDeck = readSelectedDeckName()
        if selectedDeck == "" {
            playerDeckLabel.text = "You need to select a deck first"
        } else {
            playerDeckLabel.text = "Your deck: " + selectedDeck
        }
    }
    
    
...
